--- a/Tweetbook.Blazor.Client/Components/Layout/NavMenu.razor
+++ b/Tweetbook.Blazor.Client/Components/Layout/NavMenu.razor
@@ -24,7 +24,7 @@
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
-        </div>       
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Posts">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Posts
@@ -33,6 +33,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Login">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Login
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Register">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Register
             </NavLink>
         </div>
     </nav>
